# word-practice-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: app.py  tts.py
data/: awl_headwords.json  awl_words.json  build_dataset.py
data/datasets/awl/: manifest.json  words.json
data/datasets/sample-ja/: manifest.json  words.json
frontend/: app.js  index.html  style.css
